<?xml version="1.0"?>
<package format="2">
  <name>ixblue_ins</name>
  <version>0.0.0</version>
  <description>The ixblue INS package</description>

  <maintainer email="adrien.barral@ixblue.com">Adrien BARRAL</maintainer>

  <license>MIT</license>

 <!-- <url type="website">http://wiki.ros.org/ixblue_ins_driver</url> -->

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author> 
  <author email="laure.le-breton@ixblue.com">Laure LEBROTON</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ixblue_ins_msgs</exec_depend>
  <exec_depend>ixblue_ins_driver</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
