<?xml version="1.0"?>
<package format="2">
  <name>ixblue_ins</name>
  <version>0.1.1</version>
  <description>Metapackage for iXblue INS driver</description>

  <maintainer email="adrien.barral@ixblue.com">Adrien BARRAL</maintainer>
  <maintainer email="romain.reignier@ixblue.com">Romain REIGNIER</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ixblue_ins</url>>

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author>
  <author email="laure.le-breton@ixblue.com">Laure LE BRETON</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ixblue_ins_msgs</exec_depend>
  <exec_depend>ixblue_ins_driver</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
