<?xml version="1.0"?>
<package format="2">
  <name>ixblue_ins_driver</name>
  <version>0.1.2</version>
  <description>The iXblue_ins_driver package</description>

  <maintainer email="laure.le-breton@ixblue.com">Laure LE BRETON</maintainer>
  <maintainer email="romain.reignier@ixblue.com">Romain REIGNIER</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ixblue_ins_driver</url>

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author>
  <author email="laure.le-breton@ixblue.com">Laure LE BRETON</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libboost-dev</build_depend>
  <build_export_depend>libboost-dev</build_export_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ixblue_ins_msgs</depend>
  <depend>ixblue_stdbin_decoder</depend>
  <depend>libboost-system-dev</depend>

  <test_depend>libpcap</test_depend>
  <test_depend>libboost-program-options-dev</test_depend>

</package>
