<?xml version="1.0"?>
<package format="2">
  <name>ixblue_ins_msgs</name>
  <version>0.0.0</version>
  <description>The ixblue INS defined messages package</description>

  <maintainer email="adrien.barral@ixblue.com">Adrien BARRAL</maintainer>

  <license>MIT</license>

 <!-- <url type="website">http://wiki.ros.org/ixblue_ins_driver</url> -->

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author> 
  <author email="laure.le-breton@ixblue.com">Laure LEBROTON</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
